--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en-us">
 <head>
-    <title>Home</title>
+    <title>Contact us</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
@@ -69,101 +69,109 @@
                     <div class="slogan">MYH Fine Wines will provide a very prompt response to your enquiry</div>
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <!-- Begin MailChimp Signup Form -->
-                    <div id="mc_embed_signup">
-                        <div class="phoneNomber">Phone No: <span>010-65683631</span></div>
-                        <form action="//myhfinewines.us9.list-manage.com/subscribe/post?u=66d3ca932ee7b025ebb7ede53&amp;id=537cff3299" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                            <div id="mc_embed_signup_scroll">
-                                <div class="row">
-                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                        <div class="mc-field-group">
-                                            <input type="text" value="" name="FNAME" required class="placeholderimit" id="mce-FNAME">
-                                            <label for="mce-FNAME" class="placeholderobj">First Name </label>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                        <div class="mc-field-group">
-                                            <input type="text" value="" name="LNAME" required class="placeholderimit" id="mce-LNAME">
-                                            <label for="mce-LNAME" class="placeholderobj">Last Name </label>
-                                        </div>
-                                    </div>
+                        <!-- Begin MailChimp Signup Form -->
+                        <div id="mc_embed_signup">
+                            <div class="row">
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                    <div class="phoneNomber">Hong Kong: <span>+852 8120 7488</span></div>
                                 </div>
-                                <div class="mc-field-group">
-                                    <input type="email" value="" required name="EMAIL" class="email placeholderimit" id="mce-EMAIL">
-                                    <label for="mce-EMAIL" class="placeholderobj">Email Address </label>
+                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                    <div class="phoneNomber">China: <span>+86 (10) 6568 3631</span></div>
                                 </div>
-                                <div class="mc-field-group input-group">
+                            </div>
+                            <form action="//myhfinewines.us9.list-manage.com/subscribe/post?u=66d3ca932ee7b025ebb7ede53&amp;id=aa85e205bc" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                                <div id="mc_embed_signup_scroll">
                                     <div class="row">
-                                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                                            <input type="radio" value="Consumer" name="MMERGE3" id="mce-MMERGE3-0"><label for="mce-MMERGE3-0">Consumer</label>
-                                            <input type="radio" value="Media" name="MMERGE3" id="mce-MMERGE3-3"><label for="mce-MMERGE3-3">Media</label>
+                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                            <div class="mc-field-group">
+                                                <input type="text" value="" name="FNAME" class="placeholderimit" id="mce-FNAME">
+                                                <label for="mce-FNAME" class="placeholderobj">First Name</label>
+                                            </div>
                                         </div>
-                                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                                            <input type="radio" value="Corporate Gifting" name="MMERGE3" id="mce-MMERGE3-1"><label for="mce-MMERGE3-1">Corporate Gifting</label>
-                                            <input type="radio" value="Gastronomy Service" name="MMERGE3" id="mce-MMERGE3-4"><label for="mce-MMERGE3-4">Gastronomy Service</label>
-                                        </div>
-                                        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                                            <input type="radio" value="Wine Company" name="MMERGE3" id="mce-MMERGE3-2"><label for="mce-MMERGE3-2">Wine Company</label>
-                                            <input type="radio" value="Homeware Retailer" name="MMERGE3" id="mce-MMERGE3-5"><label for="mce-MMERGE3-5">Homeware Retailer</label>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="mc-field-group">
-                                    <input type="text" value="" required name="CNAME" class="placeholderimit" id="mce-CNAME">
-                                    <label for="mce-CNAME" class="placeholderobj">Company Name </label>
-
-                                </div>
-                                <div class="mc-field-group">
-                                    <input type="text" value="" name="TTL" class=" placeholderimit" id="mce-TTL">
-                                    <label for="mce-TTL" class="placeholderobj">Title </label>
-                                </div>
-                                <div class="mc-field-group">
-                                    <input type="text" value="" name="PHN" class=" placeholderimit" id="mce-PHN">
-                                    <label for="mce-PHN" class="placeholderobj">Phone </label>
-                                </div>
-                                <div class="mc-field-group">
-                                    <input type="text" value="" name="ADR" class=" placeholderimit" id="mce-ADR">
-                                    <label for="mce-ADR" class="placeholderobj">Address </label>
-                                </div>
-                                <div class="row">
-                                    <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
-                                        <div class="mc-field-group input-group">
-                                            <div class="row">
-                                                <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12"><input type="checkbox" value="1" name="group[20037][1]" id="mce-group[20037]-20037-0"><label for="mce-group[20037]-20037-0">HK</label></div>
-                                                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><input type="checkbox" value="2" name="group[20037][2]" id="mce-group[20037]-20037-1"><label for="mce-group[20037]-20037-1">Macau</label></div>
-                                                <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 no-paddings"><input type="checkbox" value="4" name="group[20037][4]" id="mce-group[20037]-20037-2"><label for="mce-group[20037]-20037-2">Mainland China</label></div>
+                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                            <div class="mc-field-group">
+                                                <input type="text" value="" name="LNAME" class="placeholderimit" id="mce-LNAME">
+                                                <label for="mce-LNAME" class="placeholderobj">Last Name</label>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
-                                        <div class="mc-field-group">
-                                            <input type="text" value="" name="CITYNAME" class=" placeholderimit" id="mce-CITYNAME">
-                                            <label for="mce-CITYNAME" class="placeholderobj">Name of City </label>
+                                    <div class="mc-field-group">
+                                        <input type="email" value="" name="EMAIL" class="email placeholderimit" id="mce-EMAIL">
+                                        <label for="mce-EMAIL" class="placeholderobj">Email Address</label>
+                                    </div>
+                                    <div class="mc-field-group input-group">
+                                        <div class="row">
+                                            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                                                <input type="radio" value="Consumer" name="RADIOAREA" autofocus id="mce-RADIOAREA-0"><label for="mce-RADIOAREA-0">Consumer</label>
+                                                <input type="radio" value="Media" name="RADIOAREA" id="mce-RADIOAREA-1"><label for="mce-RADIOAREA-1">Media</label>
+                                            </div>
+                                            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                                                <input type="radio" value="Corporate Gifting" name="RADIOAREA" id="mce-RADIOAREA-2"><label for="mce-RADIOAREA-2">Corporate Gifting</label>
+                                                <input type="radio" value="Gastronomy Service" name="RADIOAREA" id="mce-RADIOAREA-3"><label for="mce-RADIOAREA-3">Gastronomy Service</label>
+                                            </div>
+                                            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                                                <input type="radio" value="Wine Company" name="RADIOAREA" id="mce-RADIOAREA-4"><label for="mce-RADIOAREA-4">Wine Company</label>
+                                                <input type="radio" value="Homeware Retailer" name="RADIOAREA" id="mce-RADIOAREA-5"><label for="mce-RADIOAREA-5">Homeware Retailer</label>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="mc-field-group">
-                                    <input type="text" value="" name="WEBS" class="placeholderimit" id="mce-WEBS">
-                                    <label for="mce-WEBS" class="placeholderobj">Website </label>
-                                </div>
-                                <div class="mc-field-group input-group">
-                                    <input type="checkbox" value="8" name="group[20041][8]" id="mce-group[20041]-20041-0"><label for="mce-group[20041]-20041-0" style="top:-6px;">Subscribe to Newsletter</label>
-                                </div>
-                                <div class="mc-field-group">
-                                    <input type="text" value="" style="height:147px;" name="ENQ" class="placeholderimit" id="mce-ENQ">
-                                    <label for="mce-ENQ" class="placeholderobj">Enquiry </label>
+                                    <div class="mc-field-group hideJs">
+                                        <input type="text" value="" name="COMPANAM" class="placeholderimit" id="mce-COMPANAM">
+                                        <label for="mce-COMPANAM" class="placeholderobj">Company Name</label>
+                                    </div>
+                                    <div class="mc-field-group hideJs">
+                                        <input type="text" value="" name="TITLE" class="placeholderimit" id="mce-TITLE">
+                                        <label for="mce-TITLE" class="placeholderobj">Title</label>
+                                    </div>
+                                    <div class="mc-field-group">
+                                        <input type="text" value="" name="PHONE" class="placeholderimit" id="mce-PHONE">
+                                        <label for="mce-PHONE" class="placeholderobj">Phone</label>
+                                    </div>
+                                    <div class="mc-field-group hideJs">
+                                        <input type="text" value="" name="ADDRESS" class="placeholderimit" id="mce-ADDRESS">
+                                        <label for="mce-ADDRESS" class="placeholderobj">Address</label>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
+                                            <div class="mc-field-group input-group" id="citygroup">
+                                                <div class="row">
+                                                    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12"><input type="checkbox" value="1" name="group[20113][1]" id="mce-group[20113]-20113-0"><label for="mce-group[20113]-20113-0">HK</label></div>
+                                                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><input type="checkbox" value="2" name="group[20113][2]" id="mce-group[20113]-20113-1"><label for="mce-group[20113]-20113-1">Macau</label></div>
+                                                    <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 no-paddings"><input type="checkbox" value="4" name="group[20113][4]" class="mainChina" id="mce-group[20113]-20113-2"><label for="mce-group[20113]-20113-2">Mainland China</label></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
+                                            <div class="mc-field-group">
+                                                <input type="text" value="" disabled name="NCITY" class="placeholderimit" id="mce-NCITY">
+                                                <label for="mce-NCITY" class="placeholderobj">Name of City</label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="mc-field-group">
+                                        <input type="text" value="" name="WEBSITE" class="placeholderimit" id="mce-WEBSITE">
+                                        <label for="mce-WEBSITE" class="placeholderobj">Website</label>
+                                    </div>
+                                    <div class="mc-field-group input-group">
+                                        <input type="checkbox" value="8" name="group[20117][8]" id="mce-group[20117]-20117-0"><label style="margin-bottom:17px;"  for="mce-group[20117]-20117-0">Subscribe to Newsletter</label>
+                                    </div>
+                                    <div class="mc-field-group">
+                                        <textarea type="text" value="" name="ENQUIRY" class="placeholderimit" id="mce-ENQUIRY"></textarea>
+                                        <label for="mce-ENQUIRY" class="placeholderobj">Enquiry </label>
+                                    </div>
+                                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_66d3ca932ee7b025ebb7ede53_aa85e205bc" tabindex="-1" value=""></div>
+                                    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button contsubbtn mobil-center"></div>
                                 </div>
                                 <div id="mce-responses" class="clear">
                                     <div class="response" id="mce-error-response" style="display:none"></div>
                                     <div class="response" id="mce-success-response" style="display:none"></div>
-                                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_66d3ca932ee7b025ebb7ede53_537cff3299" tabindex="-1" value=""></div>
-                                <div class="clear"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button contsubbtn mobil-center"></div>
-                            </div>
-                        </form>
+                                </div>
+                            </form>
+                        </div>
+                        <script src="javascripts/mc-validate-contact.js"></script>
+                        <script type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[2] = 'FNAME'; ftypes[2] = 'text'; fnames[1] = 'LNAME'; ftypes[1] = 'text'; fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[3] = 'RADIOAREA'; ftypes[3] = 'radio'; fnames[4] = 'COMPANAM'; ftypes[4] = 'text'; fnames[5] = 'TITLE'; ftypes[5] = 'text'; fnames[6] = 'PHONE'; ftypes[6] = 'text'; fnames[7] = 'ADDRESS'; ftypes[7] = 'text'; fnames[8] = 'NCITY'; ftypes[8] = 'text'; fnames[9] = 'WEBSITE'; ftypes[9] = 'text'; fnames[10] = 'ENQUIRY'; ftypes[10] = 'text'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+                        <!--End mc_embed_signup-->
                     </div>
-                    <!--End mc_embed_signup-->
-                </div>
             </div>
         </div>
     </section>
