--- a/index.html
+++ b/index.html
@@ -305,25 +305,32 @@
                 <h3 style="margin-bottom:16px">Signup for Newsletter</h3>
                 <div class="udertext">Receive exclusive offerings. Privacy Guaranteed</div>
             </div>
-            <div class="row" style="margin-bottom:28px;">
+            <div class="row" >
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <!-- Begin MailChimp Signup Form -->
-                    <form action="//myhfinewines.us9.list-manage.com/subscribe/post?u=66d3ca932ee7b025ebb7ede53&amp;id=703be6ffe3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="subscribeForm" novalidate>
-                        <div calss="row">
-                            <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
-                                <input type="email" value="" name="EMAIL" class="required email subInput" placeholder="Enter your Email" id="mce-EMAIL">
-                            </div>
-                            <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                                <input type="submit" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe " class="button subBtn ">
-                            </div>
-                        </div>
+                    <div id="mc_embed_signup">
+                        <form action="//myhfinewines.us9.list-manage.com/subscribe/post?u=66d3ca932ee7b025ebb7ede53&amp;id=366f29e352" style="padding:0;" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate subscribeForm" target="_blank" novalidate>
+                            <div id="mc_embed_signup_scroll">
+                                <div class="row">
+                                    <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+                                        <label for="mce-EMAIL" style="display:none;">Email Address </label>
+                                        <input type="email" value="" name="EMAIL" class="required email subInput" id="mce-EMAIL">
 
-                        <div id="mce-responses" class="clear">
-                            <div class="response" id="mce-error-response" style="display:none"></div>
-                            <div class="response" id="mce-success-response" style="display:none"></div>
-                        </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_66d3ca932ee7b025ebb7ede53_703be6ffe3" tabindex="-1" value=""></div>
-                    </form>
+                                    </div>
+                                    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                                        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="subBtn">
+                                    </div>
+                                </div>
+                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_66d3ca932ee7b025ebb7ede53_366f29e352" tabindex="-1" value=""></div>
+                            </div>
+                            <div id="mce-responses" class="clear ">
+                                <div class="response" id="mce-error-response" style="display:none"></div>
+                                <div class="response" id="mce-success-response" style="display:none"></div>
+                            </div>
+                        </form>
+                    </div>
+                    <script type='text/javascript' src="javascripts/mc-validate.js"></script>
+                    <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
                     <!--End mc_embed_signup-->
                 </div>
             </div>
