--- a/contact.html
+++ b/contact.html
@@ -80,6 +80,10 @@
                                 </div>
                             </div>
                             <form action="//myhfinewines.us9.list-manage.com/subscribe/post?u=66d3ca932ee7b025ebb7ede53&amp;id=aa85e205bc" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                                <div class="qrholder Desktop-block">
+                                    <div class="qrtext"> MYH Fine Wines<br /> live consultation<br /> via WeChat</div>
+                                    <div class="qr"><img src="images/QR.png" /></div>
+                                </div>
                                 <div id="mc_embed_signup_scroll">
                                     <div class="row">
                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
@@ -137,7 +141,7 @@
                                                 <div class="row">
                                                     <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12"><input type="checkbox" value="1" name="group[20113][1]" id="mce-group[20113]-20113-0"><label for="mce-group[20113]-20113-0">HK</label></div>
                                                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><input type="checkbox" value="2" name="group[20113][2]" id="mce-group[20113]-20113-1"><label for="mce-group[20113]-20113-1">Macau</label></div>
-                                                    <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 no-paddings"><input type="checkbox" value="4" name="group[20113][4]" class="mainChina" id="mce-group[20113]-20113-2"><label for="mce-group[20113]-20113-2">Mainland China</label></div>
+                                                    <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 no-paddings" style="margin-bottom: 16px;"><input type="checkbox" value="4" name="group[20113][4]" class="mainChina" id="mce-group[20113]-20113-2"><label for="mce-group[20113]-20113-2">Mainland China</label></div>
                                                 </div>
                                             </div>
                                         </div>
