--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
     <section id="mainSlider">
         <div class="master-slider" id="masterslider" data-height="fullscreen">
             <div class="ms-slide">
-                <img src="images/slider.jpg" data-src="images/slider.jpg" alt="lorem ipsum dolor sit" />
+                <img src="images/mainslider/slider.jpg" data-src="images/mainslider/slider.jpg" alt="lorem ipsum dolor sit" />
                 <!-- slide text layer -->
                 <img class="ms-layer" alt="Zalto"
                      style="top:145px;left:256px;"
                      data-type="image"
-                     data-src="images/zalto_slider.png"
-                     src="images/slider.jpg" />
+                     data-src="images/mainslider/zalto_slider.png"
+                     src="images/mainslider/slider.jpg" />
                 <h2 class="ms-layer"
                     style="top:172px;left:192px;"
                     data-type="text">
@@ -80,71 +80,38 @@
             </div>
             <div class="ms-slide">
                 <!-- slide background -->
-                <img src="images/slider.jpg" data-src="images/slider.jpg" alt="lorem ipsum dolor sit" />
-                <img class="ms-layer" alt="Zalto"
-                     style="top:145px;left:256px;"
-                     data-type="image"
-                     data-src="images/zalto_slider.png"
-                     src="images/slider.jpg" />
-                <h2 class="ms-layer"
-                    style="top:172px;left:192px;"
+                <img src="images/mainslider/slider.jpg" data-src="images/mainslider/Gravitas.jpg" alt="lorem ipsum dolor sit" />
+                <h2 class="ms-layer gravomega"
+                    style="top:74px;left:679px;color:#263238"
                     data-type="text">
-                    HANDCRAFTED
+                    GRAVITAS OMEGA
                 </h2>
-                <p class="ms-layer"
-                   style="top:270px;left:204px;"
-                   data-type="text">PERFECTION ACHIEVED</p>
+                <div class="ms-layer brand-btn"
+                     style="top:285px;left:1042px;">
+                    <a href="theglassware.html">View Glassware</a>
+                </div>
             </div>
             <div class="ms-slide">
                 <!-- slide background -->
-                <img src="images/slider.jpg" data-src="images/slider.jpg" alt="lorem ipsum dolor sit" />
-                <img class="ms-layer" alt="Zalto"
-                     style="top:145px;left:256px;"
-                     data-type="image"
-                     data-src="images/zalto_slider.png"
-                     src="images/slider.jpg" />
-                <h2 class="ms-layer"
-                    style="top:172px;left:192px;"
+                <img src="images/mainslider/slider.jpg" data-src="images/mainslider/L'Imperatrice-IngaBeckmann-edited.jpg" alt="lorem ipsum dolor sit" />
+                <p class="ms-layer tableP"
+                   style="top:172px;right: 110px;"
+                   data-type="text">
+                    Zalto glassware always gives our wines
+                </p>
+                <h2 class="ms-layer tableH2"
+                    style="top:172px;right: 110px;"
                     data-type="text">
-                    HANDCRAFTED
+                    an extra “oomph”
                 </h2>
-                <p class="ms-layer"
-                   style="top:270px;left:204px;"
-                   data-type="text">PERFECTION ACHIEVED</p>
-            </div>
-            <div class="ms-slide">
-                <!-- slide background -->
-                <img src="images/slider.jpg" data-src="images/slider.jpg" alt="lorem ipsum dolor sit" />
-                <img class="ms-layer" alt="Zalto"
-                     style="top:145px;left:256px;"
-                     data-type="image"
-                     data-src="images/zalto_slider.png"
-                     src="images/slider.jpg" />
-                <h2 class="ms-layer"
-                    style="top:172px;left:192px;"
-                    data-type="text">
-                    HANDCRAFTED
-                </h2>
-                <p class="ms-layer"
-                   style="top:270px;left:204px;"
-                   data-type="text">PERFECTION ACHIEVED</p>
-            </div>
-            <div class="ms-slide">
-                <!-- slide background -->
-                <img src="images/slider.jpg" data-src="images/slider.jpg" alt="lorem ipsum dolor sit" />
-                <img class="ms-layer" alt="Zalto"
-                     style="top:145px;left:256px;"
-                     data-type="image"
-                     data-src="images/zalto_slider.png"
-                     src="images/slider.jpg" />
-                <h2 class="ms-layer"
-                    style="top:172px;left:192px;"
-                    data-type="text">
-                    HANDCRAFTED
-                </h2>
-                <p class="ms-layer"
-                   style="top:270px;left:204px;"
-                   data-type="text">PERFECTION ACHIEVED</p>
+                <p class="ms-layer tableP2"
+                   style="top:270px;right: 110px;"
+                   data-type="text">Julien Froger, Founder L'Imperatrice</p>
+
+                <div class="ms-layer brand-btn"
+                     style="top:300px;right: 110px;">
+                    <a href="theglassware.html">View praise</a>
+                </div>
             </div>
             <!-- end of slide -->
         </div>
@@ -388,7 +355,7 @@
                         <img src="images/zalto denkart_no background_footer.png" alt="Zalto" />
                     </div>
                     <div class="foot-txt botMargin">Exclusive Importer and Distributor for Zalto<br /> in Hong Kong, Macau and Mainland China</div>
-                    <div class="foot-txt">© <span style="font-family:'Roboto-Light';">2015</span> MYH Fine Wines.</div>
+                    <div class="foot-txt">© <span style="font-family:'Roboto-Light';">2015</span> MYH Fine Wines</div>
                 </div>
                 <div class="col-lg-7 col-md-7 col-sm-6 col-xs-6">
                     <div class="row">
