--- a/theglassware.html
+++ b/theglassware.html
@@ -243,7 +243,7 @@
                             <div class="param">Volume:<span class="param-number">400ml</span></div>
                         </div>
                         <div class="description">
-                            <div class="generalDesc">For water and non-alcoholic drinks, fine beers or a perfect, shorter stem wine tasting glass</div>
+                            <div class="generalDesc">For water and non-alcoholic drinks, fine beers or a perfect, shorter stem wine tasting glass.</div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
@@ -256,7 +256,7 @@
                             <div class="param">Volume:<span class="param-number">380ml</span></div>
                         </div>
                         <div class="description">
-                            <div class="generalDesc">Stylish and transparent; it serves as the perfect water or cocktail glass</div>
+                            <div class="generalDesc">Stylish and transparent; it serves as the perfect water or cocktail glass.</div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
@@ -289,7 +289,7 @@
                             <div class="param">Volume:<span class="param-number">1450ml</span></div>
                         </div>
                         <div class="description">
-                            <div class="generalDesc">For red wines and full-bodied white wines gives the wine an ideal ventilation to the flowering of bouquet and taste</div>
+                            <div class="generalDesc">For red wines and full-bodied white wines gives the wine an ideal ventilation to the flowering of bouquet and taste.</div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -302,7 +302,7 @@
                             <div class="param">Volume:<span class="param-number">1900ml</span></div>
                         </div>
                         <div class="description">
-                            <div class="generalDesc">For heavy red wines that need a lot of air contact. Also ideal for magnums</div>
+                            <div class="generalDesc">For heavy red wines that need a lot of air contact. Also ideal for magnums.</div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -315,7 +315,7 @@
                             <div class="param">Volume:<span class="param-number">350ml</span>,<span class="param-number">820ml</span>,<span class="param-number">1600ml</span></div>
                         </div>
                         <div class="description">
-                            <div class="generalDesc">For elegant white wines, water or non-alcoholic drinks. Allows the optimal development of flavour and finesse. Refrigerator safe</div>
+                            <div class="generalDesc">For elegant white wines, water or non-alcoholic drinks. Allows the optimal development of flavour and finesse. Refrigerator safe.</div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
@@ -328,7 +328,7 @@
                             <div class="param">Volume:<span class="param-number">610ml</span>,<span class="param-number">2900ml</span></div>
                         </div>
                         <div class="description">
-                            <div class="generalDesc">The ultimate individual and   tabletop spittoons for tastings or   as unique table dressings/vases</div>
+                            <div class="generalDesc">The ultimate individual and   tabletop spittoons for tastings or   as unique table dressings/vases.</div>
                         </div>
                     </div>
             </div>
@@ -343,7 +343,7 @@
                         <img src="images/zalto denkart_no background_footer.png" alt="Zalto" />
                     </div>
                     <div class="foot-txt botMargin">Exclusive Importer and Distributor for Zalto<br /> in Hong Kong, Macau and Mainland China</div>
-                    <div class="foot-txt">© <span style="font-family:'Roboto-Light';">2015</span> MYH Fine Wines.</div>
+                    <div class="foot-txt">© <span style="font-family:'Roboto-Light';">2015</span> MYH Fine Wines</div>
                 </div>
                 <div class="col-lg-7 col-md-7 col-sm-6 col-xs-6">
                     <div class="row">
