--- a/contact.html
+++ b/contact.html
@@ -156,8 +156,14 @@
                                         <input type="text" value="" name="WEBSITE" class="placeholderimit" id="mce-WEBSITE">
                                         <label for="mce-WEBSITE" class="placeholderobj">Website</label>
                                     </div>
-                                    <div class="mc-field-group input-group">
-                                        <input type="checkbox" value="8" name="group[20117][8]" id="mce-group[20117]-20117-0"><label style="margin-bottom:17px;"  for="mce-group[20117]-20117-0">Subscribe to Newsletter</label>
+                                    <div class="row">
+                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                                            <div class="mc-field-group input-group">
+                                                <input type="checkbox" value="8" name="group[20117][8]" id="mce-group[20117]-20117-0"><label style="margin-bottom:17px;" for="mce-group[20117]-20117-0">Subscribe to Newsletter</label>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"></div>
+                                        <div class="newstxt">Receive exclusive offerings. Privacy guaranteed.</div>
                                     </div>
                                     <div class="mc-field-group">
                                         <textarea type="text" value="" name="ENQUIRY" class="placeholderimit" id="mce-ENQUIRY"></textarea>
@@ -188,7 +194,7 @@
                         <img src="images/zalto denkart_no background_footer.png" alt="Zalto" />
                     </div>
                     <div class="foot-txt botMargin">Exclusive Importer and Distributor for Zalto<br /> in Hong Kong, Macau and Mainland China</div>
-                    <div class="foot-txt">© <span style="font-family:'Roboto-Light';">2015</span> MYH Fine Wines.</div>
+                    <div class="foot-txt">© <span style="font-family:'Roboto-Light';">2015</span> MYH Fine Wines</div>
                 </div>
                 <div class="col-lg-7 col-md-7 col-sm-6 col-xs-6">
                     <div class="row">
