--- a/thebrand.html
+++ b/thebrand.html
@@ -275,7 +275,7 @@
                         <img src="images/zalto denkart_no background_footer.png" alt="Zalto" />
                     </div>
                     <div class="foot-txt botMargin">Exclusive Importer and Distributor for Zalto<br /> in Hong Kong, Macau and Mainland China</div>
-                    <div class="foot-txt">© <span style="font-family:'Roboto-Light';">2015</span> MYH Fine Wines.</div>
+                    <div class="foot-txt">© <span style="font-family:'Roboto-Light';">2015</span> MYH Fine Wines</div>
                 </div>
                 <div class="col-lg-7 col-md-7 col-sm-6 col-xs-6">
                     <div class="row">
